# openai-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: explain_project.sh
src/: api_client.rs  error.rs  features.rs  main.rs  message.rs
