[package]
name = "openai-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfmt = "0.10.0"
clap = "4.5.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
